--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: 1.18
 
+      - name: Install shfmt
+        run: go install mvdan.cc/sh/v3/cmd/shfmt@latest
+
       - name: Install mage
         run: go install github.com/magefile/mage@latest
 
