Update pc run all; vscode files work for mage debugging

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,19 +4,14 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "create mage_output_file.go",
+      "label": "create mage_output_file.go and run code to debug",
       "type": "shell",
-      "command": "mage --keep"
-    },
-    {
-      "label": "run tests",
-      "type": "shell",
-      "command": "mage runTests"
+      "command": "mage -d .mage --keep runPreCommit"
     },
     {
       "label": "delete mage_output_file.go",
       "type": "shell",
-      "command": "rm -f mage_output_file.go"
+      "command": "rm -f .mage/mage_output_file.go"
     }
   ]
 }
