--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,10 +9,11 @@
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "mage_output_file.go",
-      // Pass magefile as a separate argument, VSCode doesn't allow more than one file in "program".
+      "program": ".mage/mage_output_file.go",
+      // Pass magefile as a separate argument,
+      // VSCode doesn't allow more than one file in "program".
       "buildFlags": "magefile.go",
-      "preLaunchTask": "create mage_output_file.go",
+      "preLaunchTask": "create mage_output_file.go and run code to debug",
       "postDebugTask": "delete mage_output_file.go"
     }
   ]
