--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -39,6 +39,11 @@ jobs:
           brew install pre-commit
           brew install shellcheck
 
+      - name: Run go mod tidy - necessary to avoid errors with dependabot PRs
+        run: |
+          go mod tidy
+          pushd magefiles; go mod tidy; popd
+
       - name: Install pre-commit dependencies
         run: mage installDeps
 
@@ -51,6 +56,7 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          base: main
           branch: update/pre-commit-hooks
           title: Update pre-commit hooks
           commit-message: "chore: update pre-commit hooks"
