--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
     rev: v1.27.1
     hooks:
       - id: yamllint
-        entry: yamllint --strict -c .hooks/linters/.yaml-lint.yaml
+        entry: yamllint --strict -c .hooks/linters/yamllint.yaml
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1
