--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,7 +37,7 @@ repos:
     rev: v2.2.2
     hooks:
       - id: codespell
-        entry: codespell -q 3 -f --skip=".git,.github" README.md docs/* cmd/*
+        entry: codespell -q 3 -f --config .hooks/codespell.conf
 
   - repo: https://github.com/dnephin/pre-commit-golang
     rev: v0.5.1
