--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,19 +5,21 @@ repos:
     hooks:
       - id: check-case-conflict
       - id: check-merge-conflict
+      - id: check-symlinks
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-added-large-files
+      - id: detect-private-key
       - id: check-shebang-scripts-are-executable
 
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.29.0
+    rev: v1.30.0
     hooks:
       - id: yamllint
         entry: yamllint --strict -c .hooks/linters/yamllint.yaml
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.4
+    rev: v3.0.0-alpha.6
     hooks:
       - id: prettier
         files: \.(json|md|yaml|yml)$
@@ -34,10 +36,10 @@ repos:
       - id: markdownlint
 
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.2
+    rev: v2.2.4
     hooks:
       - id: codespell
-        entry: codespell -q 3 -f --config .hooks/codespell.conf
+        entry: codespell -q 3 -f --skip=".git,.github" README.md
 
   - repo: https://github.com/dnephin/pre-commit-golang
     rev: v0.5.1
@@ -60,14 +62,14 @@ repos:
         language: script
         files: go.mod
 
+      - id: go-unit-tests
+        name: Go unit tests
+        language: script
+        entry: .hooks/go-unit-tests.sh short
+        files: '\.go$'
+
       - id: go-vet
         name: Run go vet
         language: script
         entry: .hooks/go-vet.sh
-        files: '\.go$'
-
-      - id: go-unit-tests
-        name: Go unit tests
-        language: script
-        entry: .hooks/go-unit-tests.sh all
         files: '\.go$'
