--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,3 +1,18 @@
 ---
 area/github:
   - ".github/**/*"
+
+area/pre-commit:
+  - ".pre-commit-config.yaml"
+  - ".hooks/**/*"
+
+area/go:
+  - "pkg/**/*"
+  - "cmd/**/*"
+  - "*.go"
+  - "magefiles/*"
+  - "go.mod"
+  - "go.sum"
+
+area/mage:
+  - "magefiles/*"
