--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -3,7 +3,16 @@
 - name: area/github
   color: "72ccf3"
   description: >-
-    Changes made in the github directory
+    Changes made to github actions
+- name: area/pre-commit
+  color: "BC9BE3"
+  description: >-
+    Changes made to pre-commit hooks
+- name: area/go
+  color: "7BD7E0"
+  description: >-
+    Changes made to go resources
+
 # Renovate
 - name: renovate/container
   color: "ffc300"
@@ -11,6 +20,7 @@
   color: "ffc300"
 - name: renovate/github-release
   color: "ffc300"
+
 # Semantic Type
 - name: type/digest
   color: "FFEC19"
@@ -22,9 +32,7 @@
   color: "F6412D"
 - name: type/break
   color: "F6412D"
-# Release Issue
-- name: image-not-found
-  color: "ee0701"
+
 # Uncategorized
 - name: bug
   color: "ee0701"
@@ -34,9 +42,7 @@
   color: "F4D1B7"
 - name: enhancement
   color: "84b6eb"
-- name: broken-links
-  color: "7B55D7"
 - name: question
+  description: >-
+    Clarification and/or additional information required to move forward
   color: "cc317c"
-- name: community
-  color: "0e8a16"
